# cartola

./: .gitignore  Dockerfile  README.md  cartola.json  deploy.sh  docker-build-prod.sh  docker-build.sh  main.py  pyproject.toml
.github/: doc_ci_cd.md
.github/workflows/: artifact_partida.yml  cloud_run.yml  delete_run.yml  deploy.yaml  docker.yml  geral.yml  github-actions-demo.yml  matchs-teams.yml  obt.yml  players.yml  statistics.yml  tiggers.yml
cartola_2023/: util.py
cartola_2023/bigquery/: __init__.py  obt_ddl_matches.py  obt_ddl_players.py  obt_insert_matches.py  obt_insert_players.py  schema.py
cartola_2023/config/: match.py  player.py  statistic.py  team.py
cartola_2023/constant/: __init__.py  bucket.py  project_id.py  storagefolder.py
cartola_2023/export/: __init__.py  matches.py  obt.py  players.py  statistics.py  team.py  util.py
cartola_2023/leagues/: __init__.py  matches-teams.py  matches.py  matchs-teams.py  players-statistics.py  players.py  secret.py  statistics.py  teams.py
cartola_2023/leagues/brasileirao/: __init__.py  match.py  player.py  team.py
cartola_2023/leagues/premier_league/: __init__.py  match.py  obt.py  (+3 more)
cartola_2023/reprocess/: statistics.py  teams.py
cartola_2023/util/: match.py  obt.py  player.py  statistic.py  team.py  util.py
cloud_functions/matches/: main.py  requirements.txt
cloud_functions/players/: main.py
cloud_functions/statistics/: main.py
cloud_functions/teams/: main.py
docker_images/: matchs-teams.Dockerfile  matchs.Dockerfile  obt.Dockerfile  partidas.Dockerfile  players.Dockerfile  statistics.Dockerfile  teams.Dockerfile
terraform/: .terraform.lock.hcl  backend.tf  main.tf  output.tf  terraform.tfvars  teste  variables.tf
(+8 files in other folders)
