[tool.poetry]
name = "cartola-2023"
version = "0.1.0"
description = ""
authors = ["Gabriel Mizuno <gabrielmizuno@gmail.com>"]
readme = "README.md"
packages = [{include = "cartola_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
google-cloud-bigquery = "^3.9.0"
pydantic = "^2.5.3"
pyarrow = "12.0.1"
flatten-json = "^0.1.14"
python-decouple = "^3.8"
cartola-project = {git = "https://github.com/GMizuno/cartola_project"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
